Fix uncompilable for JDK8 code. +Typo fix